<resources>
    <string name="app_name">Vocab365</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="language_setting">Change Language</string>
    <string name="ok">Ok</string>
    <string name="canecl">Cancel</string>
    <string name="cancel_dilog">Cancel</string>
    <string name="lang_dialog_message"> </string>
    <string name="api_hiting">Please wait....</string>
    <string name="notempty">Can\'t be empty</string>
    <string name="network_error_msg">Internet connectivity is unavailable at the moment. Please try again later</string>
    <string name="internet_issue">Please connect to working internet connection.</string>
    <string name="password_validation">Please Enter password In 6 Digits</string>
    <string name="no_data_found">No News For Today</string>
    <string name="home">Home</string>
    <string name="vocab">Vocab</string>
    <string name="quiz">Quiz</string>
    <string name="prime">Prime</string>
    <string name="profile">Profile</string>
    <string name="more_from_category">More from Category</string>
    <string name="view_all">View All</string>
    <string name="tap_any_word_for_meaning">Tap any word for meaning</string>
    <string name="related">Related:</string>
    <string name="example">Example:</string>
    <string name="examples">Examples</string>
    <string name="forms">Forms:</string>
    <string name="antnoyms">Antonyms:</string>
    <string name="upgrade_to_prime_membership">Upgrade to PRIME</string>
    <string name="view_trick">TRICK</string>
    <string name="no_bookmark_found">No Bookmark Found</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="_00_00">00:00</string>
    <string name="_00percent">00%</string>
    <string name="_02">02</string>
    <string name="_06_00_am">06:00 AM</string>
    <string name="_0_0">0/0</string>
    <string name="_0_10">0/10</string>
    <string name="_1">-1</string>
    <string name="_10">/10</string>
    <string name="_10_20_new_words_with_easiest_way">10+ New Words with Easiest Way</string>
    <string name="_10_words">10 Words</string>
    <string name="_150_mock_test">150 + Mock Test</string>
    <string name="_199">₹199</string>
    <string name="_1_10">1/10</string>
    <string name="_1_5">(1/5)</string>
    <string name="_2">+2</string>
    <string name="_200_mock_test">200 + Mock Test</string>
    <string name="_200_videos">200 + Videos</string>
    <string name="_2_3">2/3</string>
    <string name="_2_5">(2/5)</string>
    <string name="_3000">₹3000</string>
    <string name="_300_videos">300 + Videos</string>
    <string name="_399">₹300</string>
    <string name="_3_5">(3/5)</string>
    <string name="_4_5">(4/5)</string>
    <string name="_5_5">(5/5)</string>
    <string name="_70233_33675">70233–33675</string>
    <string name="_800_practice_tests">800+ Practice Tests</string>
    <string name="_999">₹999</string>
    <string name="_9_quiz">9 Quiz</string>
    <string name="correct">Correct</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="country_prompt">Choose a Language</string>
    <string name="coupon_message">Coupon Message</string>
    <string name="incorrect">Incorrect</string>
    <string name="incorrect_answer">Incorrect Answer</string>
    <string name="answered">Answered</string>
    <string name="unanswered">Unanswered</string>
    <string name="unattempted">Unattempted</string>
    <string name="not_visited">Not visited</string>
    <string name="total_question">Total Question Attempted : 0</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="delhi" />
    <string name="clear_selection">Clear Selection</string>
    <string name="submit">SUBMIT</string>


    <string-array name="spinner_item">
        <item>"English"</item>
        <item>"Hindi"</item>
        <item>"BENGALI"</item>
        <item>"GUJARATI"</item>
        <item>"KANNADA"</item>
        <item>"MALAYALAM"</item>
        <item>"MARATHI"</item>
        <item>"PANJABI"</item>
        <item>"TAMIL"</item>
        <item>"TELUGU"</item>
        <item>"URDU"</item>
    </string-array>
    <string-array name="lan_code">
        <item>"en"</item>
        <item>"hi"</item>
        <item>"bn"</item>
        <item>"gu"</item>
        <item>"kn"</item>
        <item>"ml"</item>
        <item>"mr"</item>
        <item>"pa"</item>
        <item>"ta"</item>
        <item>"te"</item>
        <item>"ur"</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_email_tv">A password will be sent to  \n your email address</string>
    <string name="forgot_mobile_tv">A password will be sent to \n your Mobile Number</string>
</resources>
