<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="left"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/testName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textColor="@color/new_text_color"
            android:visibility="gone" />

        <LinearLayout
            android:gravity="center"
            android:id="@+id/views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/list"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_4sdp"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingTop="@dimen/_4sdp"
                android:src="@drawable/list" />
            <ImageView
                android:visibility="gone"
                android:id="@+id/grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_4sdp"
                android:paddingTop="@dimen/_4sdp"
                android:src="@drawable/list" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:paddingTop="@dimen/_4sdp"
                android:src="@drawable/list" />
        </LinearLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottom_info"
        android:layout_below="@+id/top_info"
        android:layout_marginBottom="@dimen/_5sdp"
        android:paddingLeft="@dimen/_10sdp" />

    <LinearLayout
        android:id="@+id/bottom_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal"
            android:weightSum="2.0">

            <TextView
                android:id="@+id/Correct"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_weight="1.0"
                android:drawableLeft="@drawable/green_circle"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:text="@string/correct"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/InCorrect"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_weight="1.0"
                android:drawableLeft="@drawable/red_circle"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:text="@string/incorrect"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal"
            android:weightSum="2.0">

            <TextView
                android:id="@+id/ans"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_weight="1.0"
                android:drawableLeft="@drawable/small_gray_outline_circle_selected"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:text="@string/answered"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/unans"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_weight="1.0"
                android:drawableLeft="@drawable/small_white_circle"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:text="@string/unanswered"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal"
            android:weightSum="2.0">

            <TextView
                android:id="@+id/tv_totalView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="center_vertical"
                android:text="@string/total_question"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>