<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/QuestionLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/scrollViewLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical"
               >

                <TextView
                    android:id="@+id/tvDirection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="normal"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:text=""
                    android:textColor="@color/black_light"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:background="@drawable/rect_border"
                        android:id="@+id/QueALayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:padding="@dimen/_4sdp">

                        <TextView
                            android:id="@+id/IDA"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:background="@drawable/opt_unchkd"
                            android:gravity="center"
                            android:text="@string/a"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvOptionA"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:gravity="center|left"
                            android:padding="@dimen/_5sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:text="@string/delhi"
                            android:textColor="@color/black_light"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:background="@drawable/rect_border"
                        android:id="@+id/QueBLayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:padding="@dimen/_4sdp"
                        >

                        <TextView
                            android:id="@+id/IDB"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:background="@drawable/opt_unchkd"
                            android:gravity="center"
                            android:text="@string/b"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvOptionB"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:gravity="center|left"
                            android:padding="@dimen/_5sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:text="@string/delhi"
                            android:textColor="@color/black_light"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:background="@drawable/rect_border"
                        android:id="@+id/QueCLayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:padding="@dimen/_4sdp"
                        >

                        <TextView
                            android:id="@+id/IDC"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:background="@drawable/opt_unchkd"
                            android:gravity="center"
                            android:text="@string/c"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/tvOptionC"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:gravity="center|left"
                            android:padding="@dimen/_5sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:text="@string/delhi"
                            android:textColor="@color/black_light"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:background="@drawable/rect_border"
                        android:id="@+id/QueDLayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:padding="@dimen/_4sdp"
                        >
                        <TextView
                            android:id="@+id/IDD"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:background="@drawable/opt_unchkd"
                            android:gravity="center"
                            android:text="@string/d"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvOptionD"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:gravity="center|left"
                            android:padding="@dimen/_5sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:text="@string/delhi"
                            android:textColor="@color/black_light"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:background="@drawable/rect_border"
                        android:id="@+id/QueELayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:padding="@dimen/_4sdp"
                        android:visibility="visible"
                        >

                        <TextView
                            android:id="@+id/IDE"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:background="@drawable/opt_unchkd"
                            android:gravity="center"
                            android:text="@string/e"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/tvOptionE"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:gravity="center|left"
                            android:padding="@dimen/_5sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:text="@string/delhi"
                            android:textColor="@color/black_light"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/Explation"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center|left"
                        android:padding="@dimen/_5sdp"
                        android:paddingLeft="@dimen/_15sdp"
                        android:text=""
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="10.0dip"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/BtnClear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@null"
                        android:drawableLeft="@drawable/delete_white"
                        android:drawablePadding="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:text="@string/clear_selection"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/BtnSubmit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:background="@drawable/violet_shadow_box"
                        android:paddingBottom="@dimen/_10sdp"
                        android:paddingLeft="@dimen/_35sdp"
                        android:paddingRight="@dimen/_35sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:text="@string/submit"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/off_white"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>